new form assoc employee

--- a/src/app/user-associate/user-associate.component.html
+++ b/src/app/user-associate/user-associate.component.html
@@ -1,228 +1,172 @@
 <div class="container">
   <div class="associate-box" *ngIf="userData">
+    <h1 class="mb-20px"><strong>Employee </strong>{{userData.name}}</h1>
+
     <form [formGroup]="form">
   
-      <div>
-        <label for="description">Name: </label>
-        <mat-form-field >
-          <mat-label>Name</mat-label>
-          <input  id="description" type="text" formControlName="name" matInput required="netValueEU">
-        </mat-form-field>
-      </div>
+      
+<div  class="d-flex justify-content-between">
+
+  <div class="w-49 formcolumn">
+
+
+    <mat-form-field>
+      <mat-label>Month and Year</mat-label>
+        <mat-select matInput formControlName="monthYear" >
+          
+            <mat-option  *ngFor="let monthyearItem of monthYearList" [value]="monthyearItem._id">
+                {{monthyearItem.month}} - {{monthyearItem.year}}
+            </mat-option>
+        </mat-select>
+    </mat-form-field>
+
+
+
   
+  <mat-form-field>
+    <mat-label>Net Salary €</mat-label>
+    <input id="description" type="number" formControlName="netValueEU" matInput required="netValueEU">
+  </mat-form-field>
+
+
+
+
+
+  <mat-form-field>
+    <mat-label>Day Shift</mat-label>
+    <input id="description" type="number" formControlName="bonusBrutoDayShift" matInput required="bonusDayShift">
+  </mat-form-field>
+  <mat-form-field>
+    <mat-label>Night Shift</mat-label>
+    <input id="description" type="number" formControlName="bonusBrutoNightShift" matInput required="bonusNightShift">
+  </mat-form-field>
+
+
+
+
+  <mat-form-field>
+    <mat-label>Normal Working Hours</mat-label>
+    <input id="description" type="number" formControlName="normalWorkingHours" matInput required="normalWorkingHours">
+  </mat-form-field>
+
+
+
+  <mat-form-field>
+    <mat-label>Overtime During Week (15:00-19:00)</mat-label>
+    <input id="description" type="number" formControlName="overtimeDuringWeek25Day" matInput required="overtimeDuringWeek25Day">
+  </mat-form-field>
+  <mat-form-field>
+    <mat-label>Overtime During Week (06:00-07:00)</mat-label>
+    <input id="description" type="number" formControlName="overtimeDuringWeek25Night" matInput required="overtimeDuringWeek25Night">
+  </mat-form-field>
+
+
+
+
+
+
+<mat-form-field>
+  <mat-label>Overtime During Week</mat-label>
+  <input id="description" type="number" formControlName="overtimeDuringWeek50" matInput required="overtimeDuringWeek50">
+</mat-form-field>
+
+
+
+<mat-form-field>
+  <mat-label>Week Working Hours (19:00-22:00)</mat-label>
+  <input id="description" type="number" formControlName="weekWorkinghours19_20" matInput required="weekWorkinghours19_20" >
+</mat-form-field>
+
+<mat-form-field>
+  <mat-label>Working Hours On Saturdays and Sundays +25%</mat-label>
+  <input id="description" type="number" formControlName="workingHoursOnWeekendDay" matInput required="workingHoursOnWeekendDay">
+</mat-form-field>
+
+</div>
   
-      <div>
-        <label for="description">MonthYear: </label>
+
+ 
+<div class="w-49 formcolumn">
+
+
+
     
-          <mat-form-field>
-            <mat-label>Month and Year</mat-label>
-              <mat-select matInput formControlName="monthYear" >
-                
-                  <mat-option  *ngFor="let monthyearItem of monthYearList" [value]="monthyearItem._id">
-                      {{monthyearItem.month}} - {{monthyearItem.year}}
-                  </mat-option>
-              </mat-select>
-          </mat-form-field>
-      </div>
-  
-      <div>
-        <label for="description">Net Salary</label>
-        <mat-form-field>
-          <mat-label>Net Salary</mat-label>
-          <input id="description" type="number" formControlName="netValueEU" matInput required="netValueEU">
-        </mat-form-field>
-      </div>
-  
-      <div>
-        <label for="description">Bonus</label>
-        <div class="d-flex justify-content-between">
-        <mat-form-field class="w-50 paddingright10">
-          <mat-label>Day Shift</mat-label>
-          <input id="description" type="number" formControlName="bonusBrutoDayShift" matInput required="bonusDayShift">
-        </mat-form-field>
-        <mat-form-field class="w-50 paddingleft10">
-          <mat-label>Night Shift</mat-label>
-          <input id="description" type="number" formControlName="bonusBrutoNightShift" matInput required="bonusNightShift">
-        </mat-form-field>
-      </div>
-      </div>
-
-      <div>
-        <label for="description">Normal Working Hours (07:00-15:00) </label>
-        <mat-form-field>
-          <mat-label>Normal Working Hours</mat-label>
-          <input id="description" type="number" formControlName="normalWorkingHours" matInput required="normalWorkingHours">
-        </mat-form-field>
-    </div>
-    <div>
-      <label for="description">Overtime During Week</label>
-
-      <div class="d-flex justify-content-between">
-        <mat-form-field class="w-50 paddingright10">
-          <mat-label>Overtime During Week (15:00-19:00)</mat-label>
-          <input id="description" type="number" formControlName="overtimeDuringWeek25Day" matInput required="overtimeDuringWeek25Day">
-        </mat-form-field>
-        <mat-form-field class="w-50 paddingleft10">
-          <mat-label>Overtime During Week (06:00-07:00)</mat-label>
-          <input id="description" type="number" formControlName="overtimeDuringWeek25Night" matInput required="overtimeDuringWeek25Night">
-        </mat-form-field>
-      </div>
-      
-    </div>
-
-    <div>
-      <label for="description">Overtime During Week (22:00-06:00) </label>
-      <mat-form-field>
-        <mat-label>Overtime During Week</mat-label>
-        <input id="description" type="number" formControlName="overtimeDuringWeek50" matInput required="overtimeDuringWeek50">
-      </mat-form-field>
-    </div>
-  
-    <div>
-      <label for="description">Week Working Hours (19:00-22:00) </label>
-      <mat-form-field>
-        <mat-label>Week Working Hours (19:00-22:00)</mat-label>
-        <input id="description" type="number" formControlName="weekWorkinghours19_20" matInput required="weekWorkinghours19_20" >
-      </mat-form-field>
-    </div>
-  
-    <div>
-      <label for="description">Working Hours On Saturdays and Sundays </label>
-      
-      <div class="d-flex justify-content-between">
-        <mat-form-field class="w-50 paddingright10">
-          <mat-label>Working Hours On Saturdays and Sundays +25%</mat-label>
-          <input id="description" type="number" formControlName="workingHoursOnWeekendDay" matInput required="workingHoursOnWeekendDay">
-        </mat-form-field>
-        <mat-form-field class="w-50 paddingleft10">
-          <mat-label>Working Hours On Saturdays and Sundays +50%</mat-label>
-          <input id="description" type="number" formControlName="workingHoursOnWeekendNight" matInput required="workingHoursOnWeekendNight">
-        </mat-form-field>
-      </div>
-    </div>
-  
-    <div>
-      <label for="description">Overtime On Saturdays and Sundays </label>
+ 
       <mat-form-field>
         <mat-label>Overtime On Saturdays and Sundays</mat-label>
         <input id="description" type="number" formControlName="overtimeWeekend" matInput required="overtimeWeekend">
       </mat-form-field>
-    </div>
-
-    <div>
-      <label for="description">Annual Leave</label>
-      <mat-form-field>
-        <mat-label>Annual Leave</mat-label>
-        <input id="description" type="number" formControlName="annualLeave" matInput required="annualLeave">
-      </mat-form-field>
-    </div>
-
-    <div>
-      <label for="description">Sick Days</label>
-      <mat-form-field>
-        <mat-label>Sick Days</mat-label>
-        <input id="description" type="number" formControlName="sickDays" matInput required="sickDays">
-      </mat-form-field>
-    </div>
-
-    <div>
-      <label for="description">Paid Days</label>
       
-      <div class="d-flex justify-content-between">
-        <mat-form-field class="w-50 paddingright10">
-          <mat-label>Day Shift</mat-label>
-          <input id="description" type="number" formControlName="totalPaidDay" matInput required="totalPaidDay">
-        </mat-form-field>
-        <mat-form-field class="w-50 paddingleft10">
-          <mat-label>Night Shift</mat-label>
-          <input id="description" type="number" formControlName="totalPaidNight" matInput required="totalPaidNight">
-        </mat-form-field>
-      </div>
-    </div>
+      <mat-form-field>
+        <mat-label>Working Hours On Saturdays and Sundays +50%</mat-label>
+        <input id="description" type="number" formControlName="workingHoursOnWeekendNight" matInput required="workingHoursOnWeekendNight">
+      </mat-form-field>
 
-    <div>
-      <label for="description">Total Paid Days</label>
+    <mat-form-field>
+      <mat-label>Annual Leave</mat-label>
+      <input id="description" type="number" formControlName="annualLeave" matInput required="annualLeave">
+    </mat-form-field>
+  
+
+ 
+    <mat-form-field>
+      <mat-label>Sick Days</mat-label>
+      <input id="description" type="number" formControlName="sickDays" matInput required="sickDays">
+    </mat-form-field>
+  
+
+ 
+    
       <mat-form-field>
-        <mat-label>Total Paid Days</mat-label>
-        <input id="description" type="number" formControlName="totalPaidDays" matInput required="totalPaidDays">
+        <mat-label>Day Shift</mat-label>
+        <input id="description" type="number" formControlName="totalPaidDay" matInput required="totalPaidDay">
       </mat-form-field>
-    </div>
-    <div>
-      <div>
-        <label for="description">Other Costs</label>
-        
-        <div class="d-flex justify-content-between">
-          <mat-form-field class="paddingright10">
-            <mat-label>Perdiems</mat-label>
-            <input id="description" type="number" formControlName="perdiems" matInput required="perdiems">
-          </mat-form-field>
-          <mat-form-field class="paddingleft10">
-            <mat-label>Transport</mat-label>
-            <input id="description" type="number" formControlName="transport" matInput required="transport">
-          </mat-form-field>
-          <mat-form-field class="paddingright10">
-            <mat-label>Hotel</mat-label>
-            <input id="description" type="number" formControlName="hotel" matInput required="hotel">
-          </mat-form-field>
-        </div>
-      </div>
-      <label for="description">Exchange Rate </label>
       <mat-form-field>
-        <mat-label>Exchange Rate</mat-label>
-        <input id="description" type="number" formControlName="exchangeRate" matInput required="exchangeRate">
+        <mat-label>Night Shift</mat-label>
+        <input id="description" type="number" formControlName="totalPaidNight" matInput required="totalPaidNight">
       </mat-form-field>
-    </div>
-      <!-- <div>
-        <label for="description">Hourly Wage: </label>
-        <mat-form-field>
-          <mat-label>Hourly Wage</mat-label>
-          <input id="description" type="number" formControlName="hourlyWage" matInput required="hourlyWage">
-        </mat-form-field>
-      </div>
-  
-  
-      
-  
-      <div>
-        <label for="description">WorkingHours During Night Weekend: </label>
-        <mat-form-field>
-          <mat-label>WorkingHours During Night Weekend</mat-label>
-          <input id="description" type="number" formControlName="nightWorkingHoursDuringWeekend" matInput required="nightWorkingHoursDuringWeekend">
-        </mat-form-field>
-      </div>
-  
-      <div>
-        <label for="description">Overtime DuringWeekend: </label>
-        <mat-form-field>
-          <mat-label>Overtime DuringWeekend</mat-label>
-          <input id="description" type="number" formControlName="overtimeDuringWeekend" matInput required="overtimeDuringWeekend">
-        </mat-form-field>
-      </div>
-  
-  
     
   
-      <div>
-        <label for="description">Gross SalaryAll: </label>
-        <mat-form-field>
-          <mat-label>Gross SalaryAll</mat-label>
-          <input id="description" type="number" formControlName="grossSalaryAll" matInput required="grossSalaryAll">
-        </mat-form-field>
-      </div>
-  
-       -->
-      
-      
-  
-      <div mat-dialog-actions>
-        <button mat-flat-button color="primary" type="submit" (click)="onCalculate(userData._id)" cdkFocusInitial [disabled]="form.invalid">SUBMIT</button>
-      </div>  
-    </form>
 
+ 
+    <mat-form-field>
+      <mat-label>Total Paid Days</mat-label>
+      <input id="description" type="number" formControlName="totalPaidDays" matInput required="totalPaidDays">
+    </mat-form-field>
+  
+ 
+   
+      
+        <mat-form-field>
+          <mat-label>Perdiems</mat-label>
+          <input id="description" type="number" formControlName="perdiems" matInput required="perdiems">
+        </mat-form-field>
+        <mat-form-field>
+          <mat-label>Transport</mat-label>
+          <input id="description" type="number" formControlName="transport" matInput required="transport">
+        </mat-form-field>
+        <mat-form-field>
+          <mat-label>Hotel</mat-label>
+          <input id="description" type="number" formControlName="hotel" matInput required="hotel">
+        </mat-form-field>
+      
+    
+    
+   </div>
+</div>
+    
+   
+     <mat-form-field>
+      <mat-label>Exchange Rate</mat-label>
+      <input id="description" type="number" formControlName="exchangeRate" matInput required="exchangeRate">
+    </mat-form-field>
+      
+    </form>
+    <div mat-dialog-actions>
+      <button mat-flat-button color="primary" class="w-100" type="submit" (click)="onCalculate(userData._id)" cdkFocusInitial [disabled]="form.invalid">SUBMIT</button>
+
+    </div> 
     <br>
-  
-              
-  
-  
+
   </div>
   </div>
